--- a/product/templates/product/categories.html
+++ b/product/templates/product/categories.html
@@ -19,7 +19,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <div class="overlay-container">
+                <div class="overlay-container w-100">
                     <img src="{% static 'products/img/Rectangle 120.png' %}" class="d-block w-100"
                         alt="product image" />
                     <p class="overlay-text text-white fs-1 overlay-center" style="height: fit-content">
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="overlay-container">
+                <div class="overlay-container w-100">
                     <img src="{% static 'products/img/Rectangle 120.png' %}" class="d-block w-100"
                         alt="product image" />
                     <p class="overlay-text text-white fs-1 overlay-center" style="height: fit-content">
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <div class="overlay-container">
+                <div class="overlay-container w-100">
                     <img src="{% static 'products/img/Rectangle 120.png' %}" class="d-block w-100"
                         alt="product image" />
                     <p class="overlay-text text-white fs-1 overlay-center" style="height: fit-content">
