mails order confirmation, otp, payment, subscribe

--- a/util_mail/static/mail/css/style.scss
+++ b/util_mail/static/mail/css/style.scss
@@ -39,7 +39,7 @@ body {
   /* position: relative; */
   background-image: url("https://static.panaya.in/static/mail/images/bg.png");
   background-size: contain;
-  background-repeat: repeat-y;
+  // background-repeat: repeat-y;
   h3 {
     width: fit-content;
     color: #8d0020;
