--- a/util_mail/templates/mail/subscribe.html
+++ b/util_mail/templates/mail/subscribe.html
@@ -1,18 +1,20 @@
 {% extends 'mail/base.html' %}
 
 {% block body %}
-            <h3>Subscribe to website</h3>
-            <div class="mail-text">
-                Hello ______,
-                <br><br><br>
-                Thank you for subscribing to our website.
-                <br><br><br>
-                We will keep in touch with you by keeping you up to date on
-                all new arrivals, latest news, collections and trends.
-                <br><br><br><br>
-                You will receive all updates straight into your inbox.
-                <br><br><br><br>
-                Thank you,
-                Team Panaya
-            </div>
+    <h3>Subscribe to website</h3>
+    <div class="mail-text">
+        <p>
+            Hello,
+            <br><br><br>
+            Thank you for subscribing to our website.
+            <br><br><br>
+            We will keep in touch with you by keeping you up to date on
+            all new arrivals, latest news, collections and trends.
+            <br><br><br><br>
+            You will receive all updates straight into your inbox.
+            <br><br><br><br>
+            Thank you,
+            Team Panaya
+        </p>
+    </div>
 {% endblock %}
