--- a/product/static/products/css/product.css
+++ b/product/static/products/css/product.css
@@ -2,9 +2,14 @@ body {
   background: #ffefd1;
 }
 
-a{
-    text-decoration: none !important;
+a {
+  text-decoration: none !important;
 }
+
+.txt-sp-yellow {
+  color: #f49d37eb;
+}
+
 .page-link {
   color: black;
   cursor: pointer;
@@ -19,6 +24,13 @@ a{
   border-bottom: 2px solid #8d0020;
 }
 
+#cartModal .modal-dialog,
+#cartModal .modal-content {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 #pop {
   background: #8d0020;
   background-image: url("/static/productImages/cart-bottomleft.png");
@@ -26,38 +38,24 @@ a{
   background-size: 50%;
   background-position-x: 0%;
   background-position-y: 100%;
-  max-width: 100vw;
+  width: 300px;
   height: 100vh;
 }
 
 #pop .cart {
-    font-size: 50px;
-    margin-top: 50px;
-    font-family: Poppins;
-    font-style: normal;
-    color: #f49d37eb;
-    font-weight: bolder;
-    text-decoration: underline;
+  font-size: 50px;
+  margin-top: 100px;
+  font-family: Poppins;
+  font-style: normal;
+  color: #f49d37eb;
+  font-weight: bolder;
+  text-decoration: underline;
 }
 
 #pop .cross {
-  background: rgba(244, 157, 55, 0.97);
-  border-radius: 50%;
-  width: 2.5rem;
-  height: 2.5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #8d0020;
-  font-weight: 900;
-  cursor: pointer;
-  align-self: center;
+  color: rgba(244, 157, 55, 0.97);
+  background-color: transparent;
+  font-size: 3vw;
 }
 
 #pop .cart_img {
@@ -102,28 +100,27 @@ a{
 
 #pop .sub_title {
   font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 25px;
-    line-height: 50px;
-    color: #f49d37;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 96px;
+  color: #f49d37;
 }
 
-
 #pop .view_c {
-    border: 5px solid #f49d37;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    border-radius: 10px;
-    width: 70%;
-    margin-left: 15%;
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 25.7735px;
-    line-height: 45px;
-    text-align: center;
-    color: #f49d37;
+  border: 5px solid #f49d37;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
+  width: 70%;
+  margin-left: 15%;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25.7735px;
+  line-height: 45px;
+  text-align: center;
+  color: #f49d37;
 }
 
 #pop .checkout {
@@ -222,27 +219,29 @@ a{
   text-align: center;
 }
 
-#active-product-img , #select-img-container{
-    height : 520px;
+#active-product-img,
+#select-img-container {
+  height: 520px;
 }
 
-@media (max-width: 768px) { 
-    #active-product-img , #select-img-container{
-        height : 250px;
-    }
-}
-    
-@media (min-width: 768px) and (max-width: 991.98px) { 
-    #active-product-img , #select-img-container{
-        height : 320px;
-    }
+@media (max-width: 768px) {
+  #active-product-img,
+  #select-img-container {
+    height: 250px;
+  }
 }
 
-@media (min-width: 768px) and (max-width: 1199.98px) { 
-    #active-product-img , #select-img-container{
-        height : 450px;
-    }
+@media (min-width: 768px) and (max-width: 991.98px) {
+  #active-product-img,
+  #select-img-container {
+    height: 320px;
+  }
 }
 
-
+@media (min-width: 768px) and (max-width: 1199.98px) {
+  #active-product-img,
+  #select-img-container {
+    height: 450px;
+  }
+}
 /*# sourceMappingURL=product.css.map */
