--- a/product/static/products/css/product.scss
+++ b/product/static/products/css/product.scss
@@ -2,6 +2,14 @@ body {
   background: #ffefd1;
 }
 
+a {
+  text-decoration: none !important;
+}
+
+.txt-sp-yellow {
+  color: #f49d37eb;
+}
+
 .page-link {
   color: black;
   cursor: pointer;
@@ -12,6 +20,13 @@ body {
   margin: 0 1rem;
   .active {
     border-bottom: 2px solid #8d0020;
+  }
+}
+
+#cartModal {
+  .modal-dialog,
+  .modal-content {
+    width: fit-content;
   }
 }
 
@@ -26,10 +41,13 @@ body {
   background-size: 50%;
   background-position-x: 0%;
   background-position-y: 100%;
-  max-width: 100vw;
+  // min-width: 300px;
+  width: 300px;
+  // max-width: 400px;
+  height: 100vh;
 
   .cart {
-    font-size: 60px;
+    font-size: 50px;
     margin-top: 100px;
     font-family: Poppins;
     font-style: normal;
@@ -39,16 +57,10 @@ body {
   }
 
   .cross {
-    background: rgba(244, 157, 55, 0.97);
-    border-radius: 50%;
-    width: 2.5rem;
-    height: 2.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #8d0020;
-    font-weight: 900;
-    cursor: pointer;
+    color: rgba(244, 157, 55, 0.97);
+    background-color: transparent;
+    font-size: 3vw;
+    // color: #8d0020;
   }
 
   .cart_img {
@@ -95,7 +107,7 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 34px;
+    font-size: 25px;
     line-height: 96px;
     color: #f49d37;
   }
@@ -106,12 +118,11 @@ body {
     border-radius: 10px;
     width: 70%;
     margin-left: 15%;
-    height: 60px;
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 35.7735px;
-    line-height: 55px;
+    font-size: 25.7735px;
+    line-height: 45px;
     text-align: center;
     color: #f49d37;
   }
@@ -121,12 +132,11 @@ body {
     border-radius: 10px;
     width: 70%;
     margin-left: 15%;
-    height: 60px;
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 35.7735px;
-    line-height: 55px;
+    font-size: 25.7735px;
+    line-height: 45px;
     text-align: center;
     color: #8d0020;
     margin-bottom: 50%;
@@ -209,6 +219,32 @@ body {
   height: 3rem;
   font-weight: bold;
   text-align: center;
+}
+
+#active-product-img,
+#select-img-container {
+  height: 520px;
+}
+
+@media (max-width: 768px) {
+  #active-product-img,
+  #select-img-container {
+    height: 250px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  #active-product-img,
+  #select-img-container {
+    height: 320px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199.98px) {
+  #active-product-img,
+  #select-img-container {
+    height: 450px;
+  }
 }
 
 /*# sourceMappingURL=shop.css.map */
