--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -167,18 +167,23 @@
     <div class="modal-content">
       <div id="pop">
         <div style="float: right" data-bs-dismiss="modal" aria-label="Close">
-          <div class="cross">X</div>
+          <i class="cross fas fa-times-circle"></i>
         </div>
         <div class="container">
-          <div class="cart text-center">Cart</div>
+          <div class="txt-sp-yellow text-center">
+            <h1>Cart</h1>
+          </div>
 
           <div class="container mt-3" id="cart-container"></div>
         </div>
-        <div class="mt-3 cart_hr"></div>
-        <p class="sub_title text-center">
+        <div class="text-end">
+          <a class="me-2 text-white text-decoration-underline" href="{% url 'cart' %}" id="plus-items"></a>
+        </div>
+        <div class="my-1 cart_hr"></div>
+        <h3 class="txt-sp-yellow text-center">
           Sub Total - <span id="cart-total"> Rs. 0</span>
-        </p>
-        <div class="mt-3 cart_hr"></div>
+        </h3>
+        <div class="my-1 cart_hr"></div>
         <div class="view_c mt-5"> <a class="link-light" href="{% url 'cart' %}">View Cart</a> </div>
         <a href="{% url 'create_order' %}">
           <div class="checkout mt-5"> Checkout </div>
